Fix issue where page width was greater than the viewport width and the hamburger menu was not visible

--- a/frontend/src/styles/general.css
+++ b/frontend/src/styles/general.css
@@ -1,5 +1,7 @@
-html {
-    scroll-behavior: smooth;
+html, body {
+  scroll-behavior: smooth;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
